syntax = "proto3";

package proto.v1.sessions;

option go_package = "github.com/codeclout/AccountEd/pkg/session";

message AWSConfigRequest {
  string arn = 1;
  string region = 2;
}

message AWSConfigResponse {
  bytes awsSession = 1;
}

message EncryptedStringRequest {
  string sessionId = 1;
}

message EncryptedStringResponse {
  string encryptedSessionId = 1;
}